# ethereum-elc

./: .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: test.yml
src/: client.rs  errors.rs  header.rs  lib.rs  message.rs  state.rs
tests/: Makefile  README.md  enclave.mk  go.mod  go.sum
tests/configs/templates/: ibc-1.json.tpl
tests/enclave/: Cargo.toml
tests/enclave/src/: lib.rs
tests/relayer/: main.go
tests/scripts/: run_lcp.sh  run_rly.sh
