[package]
name = "ethereum-elc"
version = "0.1.0"
edition = "2021"

[dependencies]
ibc = { version = "0.29.0", default-features = false, features = ["serde"] }
displaydoc = { version = "0.2", default-features = false }
tiny-keccak = { version = "2.0.2", default-features = false }

light-client = { git = "https://github.com/datachainlab/lcp", rev = "v0.2.11", default-features = false, features = ["ibc"] }
ethereum-ibc = { git = "https://github.com/datachainlab/ethereum-ibc-rs", rev = "v0.0.19", default-features = false }

[dev-dependencies]
hex-literal = "0.4.1"
lcp-types = { git = "https://github.com/datachainlab/lcp", rev = "v0.2.11", default-features = false, features = ["std"] }
store = { git = "https://github.com/datachainlab/lcp.git", rev = "v0.2.11", default-features = false }
ethereum-consensus = { git = "https://github.com/datachainlab/ethereum-light-client-rs", rev = "v0.1.7", default-features = false, features = ["prover"] }
ethereum-light-client-verifier = { git = "https://github.com/datachainlab/ethereum-light-client-rs", rev = "v0.1.7", default-features = false, features = ["test-utils"] }
